[project]
name = "dronalib"
authors =[
  {name = "Kush Kothari", email="kushkothari2001@gmail.com"},
]
description = "A lightweight neural-network library for quick prototyping."
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 1 - Planning",
]
dependencies = [
    "numpy",
]
dynamic= [
  "version"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "black",
  "flake8"
]
test = [
  "pytest",
]

[project.urls]
Download = "https://github.com/dronalib/dronalib"
Homepage = "https://github.com/dronalib/dronalib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dronalib/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
